[package]
name = "synchronized"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
konst = "0.3.5"
arr_macro = "0.2.1"
rayon = "1.7.0"
owning_ref = "0.4.1"
parking_lot = "0.12.1"


[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }


[[bench]]
name = "basic"
harness = false

[[bench]]
name = "throughput"
harness = false

